# I24-Anomaly-Detection

./: .gitignore  Edge.py  Graph.py  Node.py  development.ipynb  main.py  plot_graph.py  pyproject.toml  test_zi.py
.ipynb_checkpoints/: development-checkpoint.ipynb
