[tool.poetry]
name = "repl_python3_I24-Anomaly-Detection"
version = "0.1.0"
description = ""
authors = ["arthursung98 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
